--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "author": "Bartosz Lorek",
   "license": "MIT",
   "dependencies": {
+    "history": "^4.6.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^5.0.3",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
