--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "webpack-dev-server --content-base dist/",
-    "build": "webpack -p --config webpack.config.js",
+    "build": "SET NODE_ENV='production' & webpack -p --config webpack.config.js",
     "start": "node server.js",
     "test": "jest",
     "test-watch": "npm test -- --watch"
@@ -22,6 +22,7 @@
     "react-dom": "^15.3.1",
     "react-redux": "^5.0.3",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
