--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
   "author": "Bartosz Lorek",
   "license": "MIT",
   "dependencies": {
-    "history": "^4.6.3",
+    "express": "^4.15.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^5.0.3",
-    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
@@ -35,7 +33,6 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.28.4",
-    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "jest": "^20.0.4",
     "react-hot-loader": "^1.3.0",
