--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --content-base dist/",
-    "build": "SET NODE_ENV='production' & webpack -p --config webpack.config.js",
-    "start": "node server.js",
+    "start": "webpack-dev-server --content-base dist/",
+    "build": "webpack -p --config webpack.config.prod.js",
+    "server": "node server.js",
     "test": "jest",
     "test-watch": "npm test -- --watch"
   },
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "react": "^15.3.1",
+    "react-autosize-textarea": "^0.4.6",
     "react-dom": "^15.3.1",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
