--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.3",
+    "mongoose": "^4.10.8",
     "react": "^15.3.1",
     "react-autosize-textarea": "^0.4.6",
     "react-dom": "^15.3.1",
