--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --content-base dist/",
+    "start": "webpack-dev-server",
     "build": "webpack -p --config webpack.config.prod.js",
     "server": "node src/server.js",
+    "server-api": "SET PORT=8080 & npm run server",
     "test": "jest",
     "test-watch": "npm test -- --watch"
   },
@@ -26,12 +27,14 @@
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-api-middleware": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
