--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
+    "redux-api": "^0.10.6",
     "redux-api-middleware": "^1.0.3"
   },
   "devDependencies": {
