--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "mongo-sanitize": "^1.0.0",
     "mongoose": "^4.10.8",
     "react": "^15.3.1",
     "react-autosize-textarea": "^0.4.6",
