--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "classnames": "^2.2.5",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "mongo-sanitize": "^1.0.0",
     "mongoose": "^4.10.8",
     "react": "^15.3.1",
@@ -36,6 +38,7 @@
     "babel-core": "^6.14.0",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.0",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.14.0",
