handle signup results by passport js

--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "author": "Bartosz Lorek",
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "lodash": "^4.17.4",
     "mongo-sanitize": "^1.0.0",
     "mongoose": "^4.10.8",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.3.1",
     "react-autosize-textarea": "^0.4.6",
     "react-dom": "^15.3.1",
