--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "classnames": "^2.2.5",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "mongo-sanitize": "^1.0.0",
     "mongoose": "^4.10.8",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "react": "^15.3.1",
     "react-autosize-textarea": "^0.4.6",
