--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack -p --config webpack.config.prod.js",
-    "server": "node src/server.js",
+    "server": "node src/front/server.js",
     "server-api": "node src/back/index.js",
     "test": "jest",
     "test-watch": "npm test -- --watch"
