--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ubery/comments.git"
+    "url": "git+https://github.com/bartoszlorek/comments.git"
   },
   "author": "Bartosz Lorek",
   "license": "MIT",
